控制台移动至导航栏 添加更加丝滑的动画 改为纯css切换控制台方案

--- a/_config.yml
+++ b/_config.yml
@@ -802,6 +802,9 @@ translate:
 # Read Mode (閲读模式)
 readmode: true
 
+# 中控台
+centerConsole: true
+
 # dark mode
 darkmode:
   enable: true
@@ -820,7 +823,6 @@ darkmode:
 # Don't repeat 不要重複
 rightside_item_order:
   enable: false
-  centralConsole: false # 中控台
   hide: # readmode,translate,darkmode,hideAside
   show: # toc,chat,comment
 
