--- a/_config.yml
+++ b/_config.yml
@@ -468,8 +468,8 @@ footer:
          links:
            - title: 隐私协议
              link: /privacy/
-#           - title: Cookies
-#             link: /cookies/
+           - title: Cookies
+             link: /cookies/
            - title: 版权协议
              link: /copyright/
 
