--- a/_config.yml
+++ b/_config.yml
@@ -1089,6 +1089,9 @@ shortcutKey:
 accesskey:
   enable: true
 
+# 友情链接顶部标题
+linkPageTitle: 与数百名博主无限进步
+
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
