新增页脚 首页文章改版

--- a/_config.yml
+++ b/_config.yml
@@ -151,11 +151,11 @@ error_404:
 
 post_meta:
   page: # Home Page
-    date_type: both # created or updated or both 主页文章日期是创建日或者更新日或都显示
-    date_format: date # date/relative 显示日期还是相对日期
+    date_type: created # created or updated or both 主页文章日期是创建日或者更新日或都显示
+    date_format: simple # date/relative 显示日期还是相对日期 或者 简单日期
     categories: true # true or false 主页是否显示分类
     tags: true # true or false 主页是否显示标籤
-    label: true # true or false 显示描述性文字
+    label: false # true or false 显示描述性文字
   post:
     date_type: both # created or updated or both 文章页日期是创建日或者更新日或都显示
     date_format: date # date/relative 显示日期还是相对日期
