主题文档更新地址更新

--- a/_config.yml
+++ b/_config.yml
@@ -974,7 +974,7 @@ home_top:
     tips: 新品主题
     title: Theme-AnZhiYu
     image: https://bu.dusays.com/2023/05/13/645fa3cf90d70.webp
-    link: https://blog.anheyu.com/docs
+    link: https://docs.anheyu.com/
 
 # 朋友圈配置
 friends_vue:
