--- a/_config.yml
+++ b/_config.yml
@@ -1100,6 +1100,9 @@ linkPageTop:
   enable: false
   title: 与数百名博主无限进步
 
+# 缩略图后缀 archive/tag/category 页面单独开启后缀
+pageThumbnailSuffix: ''
+
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
