--- a/_config.yml
+++ b/_config.yml
@@ -521,6 +521,16 @@ footer:
       #   text: 图床
       - link: https://beian.miit.gov.cn/
         text: 湘ICP备-xxxxxxx号
+    typing:
+      enable: false
+      strings:
+        - "愿岁并谢，与友长兮。"
+        - "Forever friends, always grateful."
+      startDelay: 200
+      backDelay: 2000
+      typeSpeed: 100
+      loop: true
+      backSpeed: 20
 
 # Analysis
 # --------------------------------------
