更加严谨的页脚判断

--- a/_config.yml
+++ b/_config.yml
@@ -168,7 +168,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: false
+index_img: false # "background: url() top / cover no-repeat"
 
 # If the banner of page not setting, it will show the top_img
 default_top_img: false
