--- a/_config.yml
+++ b/_config.yml
@@ -209,8 +209,14 @@ post_meta:
     categories: true # true or false 文章页是否显示分类
     tags: true # true or false 文章页是否显示标籤
     label: true # true or false 显示描述性文字
-    mainTone: false # true or false 文章顶部图片是否使用主色调
     unread: false # true or false 文章未读功能
+
+# 主色调相关配置
+mainTone:
+  enable: false # true or false 文章是否启用获取图片主色调
+  mode: api # cdn/api/both cdn模式为图片url+imageAve参数获取主色调，api模式为请求API获取主色调，both模式会先请求cdn参数，无法获取的情况下将请求API获取
+  api: https://img2color-go.vercel.app/api?img= # mode为api时可填写
+  cover_change: true # 整篇文章跟随cover修改主色调
 
 # wordcount (字数统计)
 # see https://butterfly.js.org/posts/ceeb73f/#字数统计
@@ -591,7 +597,6 @@ site_verification:
 
 theme_color:
   enable: true
-  cover_change: false # 整篇文章跟随cover修改主色调
   main: "#3b70fc"
   dark_main: "#f2b94b"
   paginator: "#3b70fc"
