全新的post-copyright设计

--- a/_config.yml
+++ b/_config.yml
@@ -257,6 +257,10 @@ post_copyright:
   location: 长沙
   license: CC BY-NC-SA 4.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
+  avatarSinks: false # hover时头像下沉
+  copyright_author_img_back:
+  copyright_author_img_front:
+  copyright_author_link: /
 
 # Sponsor/reward
 reward:
