--- a/_config.yml
+++ b/_config.yml
@@ -752,7 +752,7 @@ subtitle:
   source: 1
   # 如果关闭打字效果，subtitle 只会显示 sub 的第一行文字
   sub:
-    - 生活明朗&#44;万物可爱&#44;人间值得&#44;未来可期.
+    # - 生活明朗&#44;万物可爱&#44;人间值得&#44;未来可期.
 
 # Loading Animation (加载动画)
 preloader:
@@ -1113,30 +1113,30 @@ greetingBox:
   enable: false
   default: 晚上好👋
   list:
-    - greeting: 晚安😴
-      startTime: 0
-      endTime: 5
-    - greeting: 早上好鸭👋, 祝你一天好心情！
-      startTime: 6
-      endTime: 9
-    - greeting: 上午好👋, 状态很好，鼓励一下～
-      startTime: 10
-      endTime: 10
-    - greeting: 11点多啦, 在坚持一下就吃饭啦～
-      startTime: 11
-      endTime: 11
-    - greeting: 午安👋, 宝贝
-      startTime: 12
-      endTime: 14
-    - greeting: 🌈充实的一天辛苦啦！
-      startTime: 14
-      endTime: 18
-    - greeting: 19点喽, 奖励一顿丰盛的大餐吧🍔。
-      startTime: 19
-      endTime: 19
-    - greeting: 晚上好👋, 在属于自己的时间好好放松😌~
-      startTime: 20
-      endTime: 24
+    # - greeting: 晚安😴
+    #   startTime: 0
+    #   endTime: 5
+    # - greeting: 早上好鸭👋, 祝你一天好心情！
+    #   startTime: 6
+    #   endTime: 9
+    # - greeting: 上午好👋, 状态很好，鼓励一下～
+    #   startTime: 10
+    #   endTime: 10
+    # - greeting: 11点多啦, 在坚持一下就吃饭啦～
+    #   startTime: 11
+    #   endTime: 11
+    # - greeting: 午安👋, 宝贝
+    #   startTime: 12
+    #   endTime: 14
+    # - greeting: 🌈充实的一天辛苦啦！
+    #   startTime: 14
+    #   endTime: 18
+    # - greeting: 19点喽, 奖励一顿丰盛的大餐吧🍔。
+    #   startTime: 19
+    #   endTime: 19
+    # - greeting: 晚上好👋, 在属于自己的时间好好放松😌~
+    #   startTime: 20
+    #   endTime: 24
 
 
 # 文章顶部ai摘要
