--- a/_config.yml
+++ b/_config.yml
@@ -529,6 +529,7 @@ footer:
       #       link: /copyright/
   footerBar:
     enable: true
+    authorLink: /
     cc: 
       enable: false
       link: /copyright
