1. 宽屏 1500px 有些浪费空间，增加到 1700px 2. 升级依赖版本

--- a/_config.yml
+++ b/_config.yml
@@ -1222,7 +1222,7 @@ CDN:
     # translate:
     # local_search:
     # algolia_js:
-    # algolia_search_v4:
+    # algolia_search:
     # instantsearch_v4:
     # pjax:
     # blueimp_md5:
@@ -1243,8 +1243,8 @@ CDN:
     # instantpage:
     # typed:
     # pangu:
-    # fancybox_css_v4:
-    # fancybox_v4:
+    # fancybox_css:
+    # fancybox:
     # medium_zoom:
     # snackbar_css:
     # snackbar:
