--- a/plugins.yml
+++ b/plugins.yml
@@ -1,7 +1,7 @@
-algolia_search_v4:
+algolia_search:
   name: algoliasearch
   file: dist/algoliasearch-lite.umd.js
-  version: 4.14.2
+  version: 4.16.0
 instantsearch_v4:
   name: instantsearch.js
   file: dist/instantsearch.production.min.js
@@ -103,24 +103,24 @@ lazyload:
 instantpage:
   name: instant.page
   file: instantpage.js
-  version: 5.1.1
+  version: 5.2.0
 typed:
   name: typed.js
-  file: lib/typed.min.js
-  version: 2.0.12
+  file: dist/typed.umd.js
+  version: 2.0.15
 pangu:
   name: pangu
   file: dist/browser/pangu.min.js
-  version: 4.0.7
-fancybox_css_v4:
+  version: 5.0.14
+fancybox_css:
   name: "@fancyapps/ui"
-  file: dist/fancybox.css
-  version: 4.0.31
+  file: dist/fancybox/fancybox.css
+  version: 5.0.14
   other_name: fancyapps-ui
-fancybox_v4:
+fancybox:
   name: "@fancyapps/ui"
-  file: dist/fancybox.umd.js
-  version: 4.0.31
+  file: dist/fancybox/fancybox.umd.js
+  version: 5.0.14
   other_name: fancyapps-ui
 medium_zoom:
   name: medium-zoom
@@ -138,7 +138,7 @@ fontawesome:
   name: "@fortawesome/fontawesome-free"
   file: css/all.min.css
   other_name: font-awesome
-  version: 6.3.0
+  version: 6.4.0
 flickr_justified_gallery_js:
   name: flickr-justified-gallery
   file: dist/fjGallery.min.js
