1. 增大首页文章链接触发范围 2. 新增swpp适配 3. 优化加载动画 4. 修复默认打字机

--- a/_config.yml
+++ b/_config.yml
@@ -559,7 +559,7 @@ footer:
       source: 1
       # 如果关闭打字效果，subtitle 只会显示 sub 的第一行文字
       sub:
-        - 生活明朗&#44; 万物可爱&#44; 人间值得&#44; 未来可期.
+        # - 生活明朗&#44; 万物可爱&#44; 人间值得&#44; 未来可期.
 
 # Analysis
 # --------------------------------------
