--- a/_config.yml
+++ b/_config.yml
@@ -637,6 +637,9 @@ theme_color:
   meta_theme_color_light: "#f7f9fe"
   meta_theme_color_dark: "#18171d"
 
+# 文章h2添加分隔线
+h2Divider: false
+
 # 表格隔行变色
 table_interlaced_discoloration: false
 
