--- a/plugins.yml
+++ b/plugins.yml
@@ -36,12 +36,17 @@ waline_js:
   name: "@waline/client"
   file: dist/waline.js
   other_name: waline
-  version: 2.14.9
+  version: 2.15.5
 waline_css:
   name: "@waline/client"
   file: dist/waline.css
   other_name: waline
-  version: 2.14.9
+  version: 2.15.5
+waline_meta_css:
+  name: '@waline/client'
+  file: dist/waline-meta.css
+  other_name: waline
+  version: 2.15.5
 sharejs:
   name: butterfly-extsrc
   file: sharejs/dist/js/social-share.min.js
