--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "bugs": {
     "url": "https://github.com/anzhiyu-c/hexo-theme-anzhiyu/issues",
-    "email": "chen@anheyu.com"
+    "email": "me@anheyu.com"
   },
   "dependencies": {
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-renderer-pug": "^3.0.0"
   },
   "homepage": "https://blog.anheyu.com/",
-  "author": "anzhiyu <chen@anheyu.com>",
+  "author": "anzhiyu <me@anheyu.com>",
   "license": "Apache-2.0"
 }
