--- a/_config.yml
+++ b/_config.yml
@@ -1255,6 +1255,11 @@ linkPageTop:
 # 缩略图后缀 archive/tag/category 页面单独开启后缀
 pageThumbnailSuffix: ''
 
+# 隐私协议弹窗
+agreementPopup:
+  enable: false
+  url: /privacy
+
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
