--- a/_config.yml
+++ b/_config.yml
@@ -1273,6 +1273,10 @@ agreementPopup:
   enable: false
   url: /privacy
 
+# 右键菜单
+rightClickMenu:
+  enable: false
+
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
@@ -1310,6 +1314,9 @@ CDN:
     # main:
     # utils:
     # translate:
+    # random_friends_post_js:
+    # right_click_menu_js:
+    # comment_barrage_js:
     # local_search:
     # algolia_js:
     # algolia_search:
